# femtoutil

./: walk.k
goccy/konoha/: AUTHORS  CMakeLists.txt  INSTALL  Makefile  README  config.h.cmake  msgpack.c
goccy/konoha.actor/: #actor1#  CMakeLists.txt  Makefile  README  ScalaActor.scala  actor.c  actor.dylib  actor.k  ping.k  pong.k  stream.c
goccy/konoha.actor/include/: konoha_actor.hpp
goccy/konoha.actor/sample/: ReceiveActor.scala  cross.k  kick.k  ping.k  pong.k  ring.k
goccy/konoha.actor/src/: actor.c  actor.cpp  stream.c  stream.cpp
goccy/konoha.visual/: Makefile  visual.k
goccy/konoha/gentools/: gen_vm.py  genkonoha.py  genlang.py  pygenlib2.py
goccy/konoha/include/: konoha1.h
goccy/konoha/include/konoha1/: inlinelibs.h  konoha_api.h  konoha_class.h  konoha_code_.h  konoha_config.h  konoha_debug.h  konoha_gc.h  konoha_glue.h  konoha_name.h  konoha_t.h  konoha_vm.h  konohalang.h  license.h
goccy/konoha/package/konoha.i/: CMakeLists.txt  i.c  i.k
goccy/konoha/package/konoha.socket/: CMakeLists.txt  ChangeLogs  socket.h  socket.k  socket_posix.c
goccy/konoha/package/konoha.socket/sample/: client.k  echo.k  server.k
goccy/konoha/sample/: msg.k  msg_server.k  test.k
goccy/konoha/src/: konoha.c
goccy/konoha/src/ext/: mt19937ar.c  qsort.c  strlen.c
goccy/konoha/src/lang/: asm.c  binary.c  commons.h  message.c  script.c  ssa.c  term.c  typing.c  vmcodelibs.c  vminline.c
goccy/konoha/src/main/: array.c  bytes.c  class.c  closure.c  commons.h  context.c  dspi.c  evidence.c  exports.c  ffi.c  map.c  memory.c  number.c  operator.c  os.c  query.c  runtime.c  security.c  semantics.c  stack.c  stream.c  string.c  struct.c  structdata.h  system.c  thread.c
ide/: screenrc  vimrc
ide/script/: array.k
lisp2011/: comparison_op.lisp  comparison_op_ans  defun.lisp  defun_ans  fibo.lisp  four_arithmetic_op.lisp  four_arithmetic_op_ans  tarai.lisp  variable_definition.lisp  variable_definition_ans
okamoto/lispo/: GC.c  Makefile  eval.c  lispo.c  lispo.h  main.c  make_cons.c  other_func.c  search.c
onoda/: Makefile  eval.c  liso.h  lisp  lisp.c  main.c  token.c
onoda/func_p/: GPATH  GRTAGS  GTAGS  Makefile  eval.c  gmon.out  liso.h  main.c  parse.c  test.c  token.c  token2.c
onoda/lisp/: Makefile  eval.c  liso.h  main.c  parse.c
onoda/multi_process/: Makefile  eval.c  liso.h  main.c  tarai
onoda/soeditor/: Makefile  file_read  file_read.cpp  file_read.h  file_read.pro  main.cpp  moc_file_read.cpp
shida/alpha/: Makefile  a  fib.lisp  main.c  token.c  token.h  tree.c  tree.h
shida/final/: Makefile  a  eval.c  eval.h  fib  main.c  main.h  parser.c  parser.h
shida/last/: Makefile  eval.c  eval.cpp  eval.h  generator.c  generator.cpp  generator.h  hash.c  hash.cpp  hash.h  main.c  main.cpp  main.h  parser.c  parser.cpp  parser.h  tak.lisp
shida/lllast/: Makefile  eval.cpp  generator.cpp  main.cpp  main.h  parser.cpp  tak.lisp
shida/llvm/: Makefile  ast.cpp  ast.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
shida/stack_machine/: Makefile  data_structure.c  data_structure.h  fib.lisp  main.c  main.h  stack_data.c  stack_data.h  token.c  token.h  tree.c  tree.h
shinpei/: README
shinpei/analyse_see/: analyzer_old.k  calc.k  calc.py  classcount.k  datamap_analyzer.k  event_calc.k  gc.k  indexof_analyzer.k  laf.k  logdata.k  logstream.k  objlivetime.k  regex_analyzer.k  second_calc.k
shinpei/aspen/: aspen.k  cgi.k  index.k
shinpei/d-actor/konoha.actor/: CMakeLists.txt  actor.k  actor_script.k  actsrv.k  kick.k  mailbox.k  test.k
shinpei/d-actor/konoha.actor/sample/: ping.k  pong.k  store.k
shinpei/d-actor/konoha.actor/src/: actor.c
shinpei/konoha.clib/: CMakeLists.txt  aobench.k  aobench_clib.k  clib.c  clib.k  clib_cifcache.c  clib_math.k  dglue.c  dglue.h  dglue.k  gd.k  gd_test.k  konoha_clib.k  konoha_math.k  ls.k  mw.k  opendir.k  opendir2.k  proc.c  puts.k  strc.k  strc2.k  strlen.k  top.k  ws.c
shinpei/konoha.posix/: concat.rb  filedir.c  filedir.k  processparam.c  processparam.k  systeminfo.c  systeminfo.k
shinpei/konoha.process/: CMakeLists.txt  ChangeLog  dglue.h  process.c  process.k  process_demo.k  sample_process.k
shinpei/libnlog/: ChangeLog  README
shinpei/xmlparser/: .#parser.k  bpmn2.k  dtaskloader.k  parser.k  test.bpmn2  threetier.bpmn2  tt.bpmn2
sugimoto/: Makefile  ahash.c~  error.c  error.c~  eval.c  eval.c~  fhash.c  fhash.c~  fibo.lisp  hashtest.c~  lisugimoto.c  lisugimoto.c~  lisugimoto.h  print.c  read.c  stack.c  tarai.lisp  vhash.c  vhash.c~
sugimoto/lisugimoto2/: #eval.c#  0  GPATH  GRTAGS  GSYMS  GTAGS  Makefile  a.lisp  ahash.c  argtest.lisp  error.c  eval.c  fact.lisp  fhash.c  funcarg.lisp  gmon.out  hardcopy.8  hashtest.c  lisugimoto  lisugimoto.c  lisugimoto.h  print.c  read.c  stack.c  test.lisp  vhash.c
sugimoto/soeditor/: .MainWindow.cpp.swp  .Widget.cpp.swp  .Widget.h.swp  .Window.h.swp  .main.cpp.swp  .soeditor.h.swp  CustomMainWindow.cppへのリンク  MainWindow.cpp  Makefile  Widget.cpp  Widget.h  Window.h  file_read.cpp  file_read.h  main.cpp  moc_Widget.cpp  moc_Window.cpp  moc_soeditor.cpp  soeditor  soeditor.h  soeditor.pro
wakamori/actor_bench/: bench.rb
wakamori/algo/: .gitignore
wakamori/aspen/: .gitignore  README.md  aspen.cgi  aspendb.py  index.cgi  index.html
wakamori/aspen_py/: .gitignore
wakamori/classtwitter/: classtwitter.py  settings.ini  ssh.py
wakamori/dscript/: recover.k  restart_apache.k  send_mms.k  test.k
wakamori/molisp/: CMakeLists.txt  Makefile  cmake_install.cmake
wakamori/molisp/include/: ml_config.h  ml_debug.h  ml_memory.h  ml_struct.h  ml_token.h  molisp.h
wakamori/molisp/src/: ml_config.h.in  ml_eval.c  ml_main.c  ml_memory.c  ml_print.c  ml_read.c  molisp.c
wakamori/ruby_actor/: actor.rb  bench.rb  ping.rb  pong.rb  ring.rb
yoan/: README
yoan/clispy/: Makefile
yukki/: fib.lisp  fib36.lisp  fib40.lisp  fib45.lisp  funcarg.lisp
yukki/lisp/: eval.c  lisp  lisp.h  parser.c
yukki/lisppp/: lisp  lisp.c  parser.c
yukki/lllow/: .lisp.cpp.swo  GPATH  GRTAGS  GSYMS  GTAGS  Makefile  compile.cpp  func.h  lisp.cpp  lisp.h  memory.h  (+4 more)
(+251 files in other folders)
